# Lang_chain

./: .gitignore  Middleware.ipynb  pyproject.toml  requirements.txt
gen-ai/: 1-langchainintro.ipynb  agents_with_multiple tools.ipynb  langchain_tools.ipynb  messages.ipynb
