[project]
name = "Lang_chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=0.37.1",
    "ipykernel>=7.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.1",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=0.0.1",
    "langchain-openai>=0.0.6",
    "langchain-tavily>=0.2.18",
    "langgraph>=0.0.24",
    "python-dotenv>=1.2.2",
]
